--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 @import "~bootstrap";
 
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
@@ -5,3 +7,6 @@
 @import "~@fortawesome/fontawesome-free/scss/brands";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/v4-shims";
+
+@import "layout";
+@import "utilities";
