--- a/resources/css/_variables.scss
+++ b/resources/css/_variables.scss
@@ -4,6 +4,7 @@ $dark-200: #505a64;
 $dark-300: #3c4752;
 $dark-400: #37424c;
 $dark-500: #303841;
+$dark-600: #2b323a;
 
 $darks: (
   "50": $dark-50,
@@ -11,5 +12,6 @@ $darks: (
   "200": $dark-200,
   "300": $dark-300,
   "400": $dark-400,
-  "500": $dark-500
+  "500": $dark-500,
+  "600": $dark-600
 );
