--- a/resources/css/_variables.scss
+++ b/resources/css/_variables.scss
@@ -1,3 +1,6 @@
+$primary: #5C2F4C;
+$secondary: #697897;
+
 $dark-50: #c8cddc;
 $dark-100: #9097a7;
 $dark-200: #505a64;
@@ -5,6 +8,9 @@ $dark-300: #3c4752;
 $dark-400: #37424c;
 $dark-500: #303841;
 $dark-600: #2b323a;
+$dark-700: #22282e;
+$dark-800: #1c2126;
+$dark-900: #15181c;
 
 $darks: (
   "50": $dark-50,
@@ -13,5 +19,8 @@ $darks: (
   "300": $dark-300,
   "400": $dark-400,
   "500": $dark-500,
-  "600": $dark-600
+  "600": $dark-600,
+  "700": $dark-700,
+  "800": $dark-800,
+  "900": $dark-900
 );
