--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap);
 @charset "UTF-8";
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
@@ -51,7 +52,7 @@
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: var(--bs-font-sans-serif);
+  --bs-body-font-family: Lato, sans-serif;
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
@@ -99,6 +100,7 @@ hr:not([size]) {
 h6, .h6, #sidebar .menu-title, h5, .h5, h4, .h4, h3, .h3, .auth-form h2, .auth-form .h2, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
+  font-family: "Poppins", sans-serif;
   font-weight: 500;
   line-height: 1.2;
 }
@@ -230,11 +232,11 @@ sup {
 }
 
 a {
-  color: #5C2F4C;
+  color: #697897;
   text-decoration: underline;
 }
 a:hover {
-  color: #4a263d;
+  color: #546079;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -3465,11 +3467,11 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #5C2F4C;
+  color: #697897;
   text-decoration: underline;
 }
 .btn-link:hover {
-  color: #4a263d;
+  color: #546079;
 }
 .btn-link:disabled, .btn-link.disabled {
   color: #6c757d;
@@ -3937,7 +3939,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #5C2F4C;
+  color: #697897;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -3947,7 +3949,7 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  color: #4a263d;
+  color: #546079;
 }
 .nav-link.disabled {
   color: #6c757d;
@@ -4798,7 +4800,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #5C2F4C;
+  color: #697897;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -4811,13 +4813,13 @@ textarea.form-control-lg {
 }
 .page-link:hover {
   z-index: 2;
-  color: #4a263d;
+  color: #546079;
   background-color: #e9ecef;
   border-color: #dee2e6;
 }
 .page-link:focus {
   z-index: 3;
-  color: #4a263d;
+  color: #546079;
   background-color: #e9ecef;
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgba(92, 47, 76, 0.25);
@@ -5756,7 +5758,7 @@ textarea.form-control-lg {
   z-index: 1080;
   display: block;
   margin: 0;
-  font-family: var(--bs-font-sans-serif);
+  font-family: "Lato", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5858,7 +5860,7 @@ textarea.form-control-lg {
   z-index: 1070;
   display: block;
   max-width: 276px;
-  font-family: var(--bs-font-sans-serif);
+  font-family: "Lato", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -20272,6 +20274,14 @@ readers do not read off random characters that represent icons */
   border-color: #dc3545 !important;
 }
 
+.page {
+  color: #9097a7;
+}
+.page .page-title {
+  color: #9097a7;
+  border-bottom: 1px solid #22282e;
+}
+
 @media (min-width: 768px) {
   #sidebar {
     width: 300px;
@@ -20365,6 +20375,22 @@ readers do not read off random characters that represent icons */
 
 .text-dark-900 {
   color: #15181c !important;
+}
+
+.card {
+  background-color: #37424c;
+  color: #c8cddc;
+  border-color: #2b323a;
+}
+
+.form-control {
+  background-color: #3c4752;
+  color: #c8cddc;
+  border-color: #505a64;
+}
+.form-control:focus, .form-control:focus-within, .form-control:active {
+  background-color: #505a64;
+  color: #c8cddc;
 }
 
 .flag-icon-background, .flag-icon {
