--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -10,6 +10,7 @@
 
 @import "layout";
 @import "utilities";
+@import "components";
 
 $flag-icon-css-path: '~flag-icon-css/flags';
 $include: gb, nl, de, es, fr, fi, dk;
