--- a/resources/css/_components.scss
+++ b/resources/css/_components.scss
@@ -1,4 +1,5 @@
 @import "components/card";
+@import "components/editor";
 @import "components/forms";
 @import "components/table";
 @import "components/tabs";
