Refactor design, add credits, add updates controller

--- a/resources/css/_components.scss
+++ b/resources/css/_components.scss
@@ -1,6 +1,7 @@
 @import "components/card";
 @import "components/editor";
 @import "components/forms";
+@import "components/sidebar";
 @import "components/table";
 @import "components/tabs";
 @import "components/toasts";
